@@ -339,23 +339,6 @@ public:
                     context_quit();
                     break;
                 case SDL_WINDOWEVENT:
-                    // HACK: Fix #2158, OpenRCT2 does not draw if it does not think that the window is
-                    //                  visible - due a bug in SDL 2.0.3 this hack is required if the
-                    //                  window is maximised, minimised and then restored again.
-                    if (e.window.event == SDL_WINDOWEVENT_FOCUS_GAINED)
-                    {
-                        if (SDL_GetWindowFlags(_window) & SDL_WINDOW_MAXIMIZED)
-                        {
-                            SDL_RestoreWindow(_window);
-                            SDL_MaximizeWindow(_window);
-                        }
-                        if ((SDL_GetWindowFlags(_window) & SDL_WINDOW_FULLSCREEN_DESKTOP) == SDL_WINDOW_FULLSCREEN_DESKTOP)
-                        {
-                            SDL_RestoreWindow(_window);
-                            SDL_SetWindowFullscreen(_window, SDL_WINDOW_FULLSCREEN_DESKTOP);
-                        }
-                    }
-
                     if (e.window.event == SDL_WINDOWEVENT_SIZE_CHANGED)
                     {
                         OnResize(e.window.data1, e.window.data2);
